<resources>
    <string name="app_name">Sales</string>
    <string name="add">Добавить</string>
    <string name="create_prod">Создать</string>
    <string name="shop">Магазин</string>
    <string name="product">Заказ</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="save_short">Сохр.</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="date">Дата</string>
    <string name="app_name2">Список</string>
    <string name="add_prod">Введите список</string>
    <string name="camera">Фото</string>
    <string name="gallery">Обзор</string>
    <string name="choice_gallery">Обзор фото</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>