<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".EditActivity">

    <TextView
        android:id="@+id/dateCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:hint="@string/date"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editShop"/>
    <EditText
        android:id="@+id/editShop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shop"
        android:textSize="22sp"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@+id/dateCreate"
        app:layout_constraintBottom_toTopOf="@+id/editTextActivityEdit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <EditText
        android:id="@+id/editTextActivityEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:hint="@string/product"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editShop"
        app:layout_constraintBottom_toTopOf="@+id/okButtonActivityEdit"/>
    <Button
        android:id="@+id/okButtonActivityEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextActivityEdit"/>
    <Button
        android:id="@+id/cancelButtonActivityEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@+id/editTextActivityEdit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>