<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="4dp">

    <ImageView
        android:id="@+id/imageProd"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/load_image"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/textProd"
        app:layout_constraintTop_toBottomOf="@+id/shop"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/shop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:hint="@string/shop"
        app:layout_constraintBottom_toTopOf="@+id/textProd"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/dateCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:hint="@string/date"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textProd"/>

    <TextView
        android:id="@+id/textProd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingStart="10dp"
        android:hint="@string/product"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintTop_toTopOf="@id/shop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/imageProd"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#D1D1D1"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/imageProd"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>